Fix problems with sort movie on mobile

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -128,6 +128,7 @@
             }
             .verticalLine{
                 width:100vw;
+                height:0;
             }
         }
     }
